# dsky

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: architecture.html
src/dsky/: __init__.py  cli.py  clock.py  config.py  ops.py
src/dsky/advisory/: __init__.py  critic.py  io.py  openrouter.py  spec_writer.py  synthesizer.py  triage.py
src/dsky/data/: __init__.py  bars.py  manifest.py
src/dsky/data/providers/: __init__.py  polygon.py
src/dsky/db/: __init__.py  engine.py  events.py  projections.py  schema.sql
src/dsky/lifecycle/: __init__.py  machine.py  registry.py  states.py
src/dsky/research/: __init__.py  ledger.py  spec.py
src/dsky/research/backtest/: __init__.py  baselines.py  costs.py  engine.py
src/dsky/research/robustness/: __init__.py  _math.py  nulls.py  outlier_drop.py  regime_split.py  subsample.py
tests/: __init__.py  test_baselines.py  test_cli.py  test_clock_discipline.py  test_costs.py  test_data.py  test_engine.py  test_events.py  test_ledger.py  test_lookahead_invariant.py  test_package.py  test_projections.py  test_robustness.py  test_spec.py  test_transitions.py
