[project]
name = "dsky"
version = "0.0.0"
description = "Direction-Sky: a pre-registered, append-only quant research system."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "polars>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsky"]

# --- Dev / tooling (PEP 735) ----------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

# --- pytest ---------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-m", "not requires_polygon",
]
markers = [
    "requires_polygon: hits the live Polygon API; needs POLYGON_API_KEY and a network. Run explicitly via `pytest -m requires_polygon`.",
]

# --- ruff (strict) --------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# "ALL" turns on every rule category. A small, intentional ignore list follows.
select = ["ALL"]
ignore = [
    "D401",    # Imperative mood — we use noun-phrase module docstrings by design.
    "D203",    # Conflicting multi-line docstring rule.
    "D213",    # Conflicting multi-line docstring rule.
    "COM812",  # Trailing comma rules (no formatter conflict here).
    "ISC001",  # Implicit string concat rule (no formatter conflict here).
]

[tool.ruff.lint.per-file-ignores]
# Tests are allowed to assert and to have untyped test functions.
"tests/**" = [
    "S101",  # Use of assert detected (fine in tests).
    "D",     # Docstring rules don't apply to every test helper.
    "ANN",   # Type annotations are not required in test code.
    "ARG",   # Unused fixture / argument is fine in tests.
    "FBT",   # Boolean positional args are fine in tests.
    "PLR2004", # Magic value comparisons are fine in tests.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy (strict) --------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/dsky"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
